--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
 	<script type="text/javascript" src="resources/js/calculator.js"></script>
 </head>
 <body>
-	<div>
+	<div align="center">
 		<section>
 			<input type="text" name="input" class="display-input">
 		</section>
 		<section>
-			<button onclick="appendText('(')">(</button>
-			<button onclick="appendText(')')">)</button>
-			<button onclick="appendText('%')">%</button>
-			<button onclick="cancel()">CE</button>
+			<button class="operator2" onclick="appendText('(')">(</button>
+			<button class="operator2" onclick="appendText(')')">)</button>
+			<button class="operator2" onclick="appendText('%')">%</button>
+			<button class="cancel" onclick="cancel()">CE</button>
 			<br>
 			<button onclick="appendText(7)">7</button>
 			<button onclick="appendText(8)">8</button>
 			<button onclick="appendText(9)">9</button>
-			<button onclick="appendText('÷')">÷</button>
+			<button class="operator" onclick="appendText('/')">÷</button>
 			<br>
 			<button onclick="appendText(4)">4</button>
 			<button onclick="appendText(5)">5</button>
 			<button onclick="appendText(6)">6</button>
-			<button onclick="appendText('*')">×</button>
+			<button class="operator" onclick="appendText('*')">×</button>
 			<br>
 			<button onclick="appendText(1)">1</button>
 			<button onclick="appendText(2)">2</button>
 			<button onclick="appendText(3)">3</button>
-			<button onclick="appendText('-')">-</button>
+			<button class="operator" onclick="appendText('-')">-</button>
 			<br>
 			<button onclick="appendText(0)">0</button>
-			<button onclick="appendText('.')">.</button>
-			<button onclick="equal()">=</button>
-			<button onclick="appendText('+')">+</button>
+			<button class="operator2" onclick="appendText('.')">.</button>
+			<button class="equal" onclick="equal()">=</button>
+			<button class="operator" onclick="appendText('+')">+</button>
 		</section>
 	</div>
 </body>
